Fixed nav issue

--- a/website_code/components/courses.html
+++ b/website_code/components/courses.html
@@ -19,8 +19,8 @@
                 <button id="burger-button" aria-label="Toggle navigation menu" aria-expanded="false">&#9776;</button>
             </div>
             <ul class="nav-links" role="menubar">
-                <li role="none"><a href="index.html" role="menuitem">Home</a></li>
-                <li role="none"><a href="courses.html" role="menuitem" aria-current="page">Courses</a></li>
+                <li role="none"><a href="index.html" role="menuitem" aria-current="page">Home</a></li>
+                <li role="none"><a href="courses.html" role="menuitem">Courses</a></li>
                 <li role="none"><a href="facilities.html" role="menuitem">Facilities</a></li>
                 <li role="none"><a href="resources.html" role="menuitem">Learning Resources</a></li>
                 <li role="none"><a href="staff-info.html" role="menuitem">Staff</a></li>
